<resources>
    <string name="app_name">DIA Android</string>
    <string name="hello_world">Hello World</string>
    <string name="change_text_view">Change text view</string>
    <string name="input_text_here">Input text here ...</string>
    <string name="enable_button">Enable Button</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="show_snack_bar">Show snack bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_fragment">Show Fragment</string>
    <string name="show_bottom_navigation">Show Bottom Navigation</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="save_pokemon">Save Pokemon</string>
</resources>