<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="24dp"
    tools:context=".ComponentActivity">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="18sp"
        android:textColor="@color/Red"
        android:textStyle="bold|italic"/>
    
    <Button
        android:id="@+id/btnChangeTv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/Red"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:text="@string/change_text_view"/>
    
    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/input_text_here"
        android:inputType="phone"/>
    
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/profile"
        android:background="@drawable/red_circle"/>

    <CheckBox
        android:id="@+id/cbButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/enable_button"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/blue"/>

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/red"/>
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swDark"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:switchPadding="12dp"
        app:thumbTint="@color/Blue"
        android:text="@string/dark_mode"/>
    
    <Button
        android:id="@+id/btnSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/show_snack_bar"/>

    <Button
        android:id="@+id/btnFragment"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/show_fragment"/>

    <Button
        android:id="@+id/btnBottomNavigation"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/show_bottom_navigation"/>

</LinearLayout>