<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <EditText
        android:id="@+id/etPokemonName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/pokemon_name" />

    <EditText
        android:id="@+id/etPokemonDesc"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/etPokemonColor"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/color" />
    
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/save_pokemon"
        android:textColor="@color/White"
        android:backgroundTint="@color/Blue"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" />

</LinearLayout>